estilizado css menu

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="./css/styles.css" rel="stylesheet" >
+
+    <title>Landing page</title>
 </head>
 <body>
+    <nav id="nav">
+        <div>
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>Ultimas Edições</a></li>
+                <li><a>Requisitos para participar</a></li>
+            </ul>
+
+        </div>
+        <button>Login</button>
+    </nav>
     
 </body>
 </html>
